[tool.poetry]
name = "ivp_ws21_histo_eq"
version = "0.1.0"
description = "Code for 'Histogram Equalization' seminar 'Image, Video and Perception', TU Ilmenau, WS 21/22."
authors = [
    "Johannes Fried <johannes.fried@tu-ilmenau.de>",  
    "Zamam Mirza <zamam.mirza@tu-ilmenau.de>", 
    "Ahmed Mustafa <ahmed.mustafa@tu-ilmenau.de>",
    "Adham Radwan <adham.radwan@tu-ilmenau.de>"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
